# ncaf

./: CMakeLists.txt  README.md
cmake/: ncaf-config.cmake.in
include/ncaf/: api.h
include/ncaf/3rd_lib/daking/: MPSC_queue.h
include/ncaf/3rd_lib/moody_camel_queue/: blockingconcurrentqueue.h  concurrentqueue.h  lightweightsemaphore.h
include/ncaf/internal/: actor.h  actor_config.h  actor_ref.h  actor_registry.h  alias.h  constants.h  logging.h  network.h  reflect.h  remote_handler_registry.h  scheduler.h  serialization.h  util.h
include/ncaf/internal/actor_ref_serialization/: actor_ref_deserialization_info.h  actor_ref_serialization.h  actor_ref_serialization_reader.h
src/ncaf/internal/: actor_registry.cc  logging.cc  network.cc
test/: CMakeLists.txt  basic_api_test.cc  complex_api_test.cc  distributed_test.cc  heartbeat_test.cc  heartbeat_test.py  logging_test.cc  multi_process_test.cc  multi_process_test.sh  network_test.cc  scheduler_test.cc  shuffle_merge_test.cc  skynet_test.cc  stress_test.cc  util_test.cc
test/import_test/cmake_cpm/: CMakeLists.txt  build.sh  build_ci.sh
test/import_test/cmake_install_find_package/: CMakeLists.txt  build.sh  build_ci.sh  main.cc
